--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,11 @@ readme = "README.md"
 python = "^3.12"
 fastapi = "^0.111.0"
 uvicorn = "^0.30.1"
+sqlmodel = "^0.0.19"
+pydantic = "^2.8.2"
+python-jose = "^3.3.0"
+python-multipart = "^0.0.9"
+passlib = "^1.7.4"
 
 
 [build-system]
